Fix: dependencies and custom scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,4 +67,11 @@ body {
   height: 100%;
   min-height: 100vh;
 }
+
+/* hide #bmc-wbtn on small screens */
+@media only screen and (max-width: 480px) {
+  #bmc-wbtn {
+    display: none !important;
+  }
+}
 /* End for custom utilities */
